# StringUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  runtests.sh
include/: StringUtils.hpp
include/StringUtils/: StringUtils.hpp
include/StringUtils/detail/: ParseTraits.hpp
src/: StringUtils.cppm
src/detail/: ParseTraitsDefault.cppm
test/: test.cpp
tests/: tests.cpp
